# SurenaHandMultiLayer

./: .gitignore  README.md
.github/workflows/: ci.yml
Documentation/: Readme.md  handMultilayer-javan.xlsx
HardwareDesign/Libraries/: HAND-MULTILAYER.PcbLib
HardwareDesign/PCB/: Bridge.SchDoc  Driver.SchDoc  Sheet1.SchDoc  handMultilayer.PrjPcb  handMultilayer.PrjPcbStructure  main.SchDoc
HardwareDesign/PCB/Project Outputs for handMultilayer/: HAND_MULTILAYER-Plated.TXT  HAND_MULTILAYER-macro.APR_LIB  HAND_MULTILAYER.2  HAND_MULTILAYER.DRR  HAND_MULTILAYER.EXTREP  HAND_MULTILAYER.G1  HAND_MULTILAYER.G2  HAND_MULTILAYER.GBL  HAND_MULTILAYER.GBO  HAND_MULTILAYER.GBP  HAND_MULTILAYER.GBS  HAND_MULTILAYER.GD1  HAND_MULTILAYER.GG1  HAND_MULTILAYER.GKO  HAND_MULTILAYER.GM  HAND_MULTILAYER.GM1  HAND_MULTILAYER.GM13  HAND_MULTILAYER.GM15  HAND_MULTILAYER.GML  HAND_MULTILAYER.GPB  HAND_MULTILAYER.GPT  HAND_MULTILAYER.GTL  HAND_MULTILAYER.GTO  HAND_MULTILAYER.GTP  HAND_MULTILAYER.GTS  HAND_MULTILAYER.LDP  HAND_MULTILAYER.REP  HAND_MULTILAYER.RUL  HAND_MULTILAYER.apr  Status Report.Txt
firmware/: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  SurenaHandMultiLayer Debug.launch  SurenaHandMultiLayer.ioc  shand Debug.launch  shand.ioc
firmware/Core/Inc/: BME.c  BME.h  Logic.h  bmp280.h  command_handler.h  delay.h  logic.h  main.h  pid.h  stm32f1xx_it.h
firmware/Core/Src/: Logic.c  bmp280.c  command_handler.c  delay.c  logic.c  main.c  pid.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
firmware/test/: CMakeLists.txt  logic_test.c  logic_test_runner.c  main_test.c
firmware/test/logic/: CMakeLists.txt  main_test.c
firmware/test/pid/: CMakeLists.txt  main.c
pcb/: HAND-MULTILAYER.SchLib  HAND_MULTILAYER.PcbDoc.htm  PULSE_SELECT.SchDoc  main.SchDoc
software/: usbcommand.sln
software/usbcommand/: Form1.Designer.cs  Form1.cs  Form1.resx  Hid.cs  Program.cs  usbcommand.csproj
software/usbcommand/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
